// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ui/unitTesting/assertionsPanel/assertion > should render the component as editable with light theme. 1`] = `
<div
  className="msla-workflow-assertion"
>
  <div
    className="msla-workflow-assertion-header"
  >
    <button
      className="fui-Button r1alrhcs ___13arsol_wkbbhs0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl"
      data-testid="test-name-assertion-heading-button"
      onClick={[Function]}
      type="button"
    >
      <span
        className="fui-Button__icon rywnvv2 ___963sj20_1qpm2bl f1nizpg2"
      >
        <svg
          aria-hidden={true}
          className="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.22 8.47c.3-.3.77-.3 1.06 0L12 15.19l6.72-6.72a.75.75 0 1 1 1.06 1.06l-7.25 7.25c-.3.3-.77.3-1.06 0L4.22 9.53a.75.75 0 0 1 0-1.06Z"
            fill="currentColor"
          />
        </svg>
        <svg
          aria-hidden={true}
          className="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.3 8.3a1 1 0 0 1 1.4 0l6.3 6.29 6.3-6.3a1 1 0 1 1 1.4 1.42l-7 7a1 1 0 0 1-1.4 0l-7-7a1 1 0 0 1 0-1.42Z"
            fill="currentColor"
          />
        </svg>
      </span>
      test-name
    </button>
    <div
      className="msla-workflow-assertion-header-buttons"
    >
      <button
        aria-label="Delete assertion"
        className="fui-Button r1alrhcs ___w3o4yv0_df8ghi0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f18ktai2 fwbmr0d f44c6la"
        data-testid="assertion-delete-icon-button"
        onClick={[Function]}
        type="button"
      >
        <span
          className="fui-Button__icon rywnvv2"
        >
          <svg
            aria-hidden={true}
            className="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
            fill="currentColor"
            height="24"
            style={
              {
                "color": "var(--colorBrandForeground1)",
              }
            }
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 5h4a2 2 0 1 0-4 0ZM8.5 5a3.5 3.5 0 1 1 7 0h5.75a.75.75 0 0 1 0 1.5h-1.32l-1.17 12.11A3.75 3.75 0 0 1 15.03 22H8.97a3.75 3.75 0 0 1-3.73-3.39L4.07 6.5H2.75a.75.75 0 0 1 0-1.5H8.5Zm2 4.75a.75.75 0 0 0-1.5 0v7.5a.75.75 0 0 0 1.5 0v-7.5ZM14.25 9a.75.75 0 0 0-.75.75v7.5a.75.75 0 0 0 1.5 0v-7.5a.75.75 0 0 0-.75-.75Z"
              fill="currentColor"
            />
          </svg>
          <svg
            aria-hidden={true}
            className="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
            fill="currentColor"
            height="24"
            style={
              {
                "color": "var(--colorBrandForeground1)",
              }
            }
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 5h4a2 2 0 1 0-4 0ZM8.5 5a3.5 3.5 0 1 1 7 0h5.75a.75.75 0 0 1 0 1.5h-1.32l-1.17 12.11A3.75 3.75 0 0 1 15.03 22H8.97a3.75 3.75 0 0 1-3.73-3.39L4.07 6.5H2.75a.75.75 0 0 1 0-1.5H8.5Zm2 4.75a.75.75 0 0 0-1.5 0v7.5a.75.75 0 0 0 1.5 0v-7.5ZM14.25 9c.41 0 .75.34.75.75v7.5a.75.75 0 0 1-1.5 0v-7.5c0-.41.34-.75.75-.75Zm-7.52 9.47a2.25 2.25 0 0 0 2.24 2.03h6.06c1.15 0 2.12-.88 2.24-2.03L18.42 6.5H5.58l1.15 11.97Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    className="msla-workflow-assertion-content"
  >
    <div
      className="msla-assertion-field"
    >
      <label
        className="ms-Label root-109"
        htmlFor="test-name-name"
      >
        Assertion name
      </label>
      <div
        className="ms-TextField root-111"
      >
        <div
          className="ms-TextField-wrapper"
        >
          <div
            className="ms-TextField-fieldGroup fieldGroup-112"
          >
            <input
              aria-invalid={false}
              aria-label="Assertion name"
              className="ms-TextField-field field-113"
              data-testid="test-name-name"
              disabled={false}
              id="test-name-name"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              placeholder="Enter name"
              type="text"
              value="test-name"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="msla-assertion-field"
    >
      <label
        className="ms-Label root-122"
        htmlFor="test-name-description"
      >
        Description
      </label>
      <div
        className="ms-TextField ms-TextField--multiline root-111"
      >
        <div
          className="ms-TextField-wrapper"
        >
          <div
            className="ms-TextField-fieldGroup fieldGroup-123"
          >
            <textarea
              aria-invalid={false}
              aria-label="Description"
              className="ms-TextField-field field-124"
              data-testid="test-name-description"
              disabled={false}
              id="test-name-description"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              placeholder="Enter description"
              value="test-description"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="msla-assertion-condition"
    >
      <label
        className="ms-Label root-109"
        htmlFor="test-name-expression"
      >
        Condition expression
      </label>
      <div
        className="msla-assertion-condition-editor"
      />
    </div>
  </div>
</div>
`;

exports[`ui/unitTesting/assertionsPanel/assertion > should render the component as no editable with dark theme. 1`] = `
<div
  className="msla-workflow-assertion"
>
  <div
    className="msla-workflow-assertion-header"
  >
    <button
      className="fui-Button r1alrhcs ___13arsol_wkbbhs0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl"
      data-testid="test-name-assertion-heading-button"
      onClick={[Function]}
      type="button"
    >
      <span
        className="fui-Button__icon rywnvv2 ___963sj20_1qpm2bl f1nizpg2"
      >
        <svg
          aria-hidden={true}
          className="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.3 4.3a1 1 0 0 0 0 1.4l6.29 6.3-6.3 6.3a1 1 0 1 0 1.42 1.4l7-7a1 1 0 0 0 0-1.4l-7-7a1 1 0 0 0-1.42 0Z"
            fill="currentColor"
          />
        </svg>
        <svg
          aria-hidden={true}
          className="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.47 4.22c-.3.3-.3.77 0 1.06L15.19 12l-6.72 6.72a.75.75 0 1 0 1.06 1.06l7.25-7.25c.3-.3.3-.77 0-1.06L9.53 4.22a.75.75 0 0 0-1.06 0Z"
            fill="currentColor"
          />
        </svg>
      </span>
      test-name
    </button>
    <div
      className="msla-workflow-assertion-header-buttons"
    >
      <button
        aria-label="Edit assertion"
        className="fui-Button r1alrhcs ___w3o4yv0_df8ghi0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f18ktai2 fwbmr0d f44c6la"
        data-testid="assertion-edit-icon-button"
        onClick={[Function]}
        type="button"
      >
        <span
          className="fui-Button__icon rywnvv2"
        >
          <svg
            aria-hidden={true}
            className="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
            fill="currentColor"
            height="24"
            style={
              {
                "color": "var(--colorBrandForeground1)",
              }
            }
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.9 3.05a3.58 3.58 0 1 1 5.05 5.06l-.89.9L15 3.93l.9-.9ZM13.93 5l-10 10c-.4.4-.7.92-.82 1.48l-1.1 4.6a.75.75 0 0 0 .9.9l4.6-1.1A3.1 3.1 0 0 0 9 20.07l10-10L13.94 5Z"
              fill="currentColor"
            />
          </svg>
          <svg
            aria-hidden={true}
            className="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
            fill="currentColor"
            height="24"
            style={
              {
                "color": "var(--colorBrandForeground1)",
              }
            }
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20.95 3.05a3.58 3.58 0 0 0-5.06 0L3.94 15c-.4.4-.7.92-.82 1.48l-1.1 4.6a.75.75 0 0 0 .9.9l4.6-1.1A3.1 3.1 0 0 0 9 20.07L20.95 8.11a3.58 3.58 0 0 0 0-5.06Zm-4 1.06a2.08 2.08 0 1 1 2.94 2.94l-.89.89L16.06 5l.9-.9ZM15 6.06 17.94 9l-10 10a1.6 1.6 0 0 1-.76.43l-3.42.8.82-3.4c.06-.3.21-.56.42-.77l10-10Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    className="msla-workflow-assertion-content"
  >
    <div
      className="msla-assertion-field"
    />
    <div
      className="msla-assertion-field"
    >
      <span
        className="fui-Text msla-assertion-field-read-only ___c56hd20_1xy0w11 fk6fouc fkhj508 f1i3iumi figsok6 fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649"
      >
        test-description
      </span>
    </div>
    <div
      className="msla-assertion-condition"
    >
      <div
        className="msla-assertion-condition-editor"
      />
    </div>
  </div>
</div>
`;

exports[`ui/unitTesting/assertionsPanel/assertion > should render the component with validation errors and error traffic light dot 1`] = `
<div
  className="msla-workflow-assertion"
>
  <div
    className="msla-workflow-assertion-header"
  >
    <button
      className="fui-Button r1alrhcs ___w3o4yv0_df8ghi0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f18ktai2 fwbmr0d f44c6la"
      data-testid="-assertion-heading-button"
      onClick={[Function]}
      type="button"
    >
      <span
        className="fui-Button__icon rywnvv2"
      >
        <svg
          aria-hidden={true}
          className="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.22 8.47c.3-.3.77-.3 1.06 0L12 15.19l6.72-6.72a.75.75 0 1 1 1.06 1.06l-7.25 7.25c-.3.3-.77.3-1.06 0L4.22 9.53a.75.75 0 0 1 0-1.06Z"
            fill="currentColor"
          />
        </svg>
        <svg
          aria-hidden={true}
          className="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.3 8.3a1 1 0 0 1 1.4 0l6.3 6.29 6.3-6.3a1 1 0 1 1 1.4 1.42l-7 7a1 1 0 0 1-1.4 0l-7-7a1 1 0 0 1 0-1.42Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
    <span
      className="msla-assertion-error-dot"
    >
      <svg
        fill="none"
        height="8"
        viewBox="0 0 8 8"
        width="8"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="#A4262C"
          height="8"
          rx="4"
          width="8"
        />
      </svg>
    </span>
    <div
      className="msla-workflow-assertion-header-buttons"
    >
      <button
        aria-label="Delete assertion"
        className="fui-Button r1alrhcs ___w3o4yv0_df8ghi0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f18ktai2 fwbmr0d f44c6la"
        data-testid="assertion-delete-icon-button"
        onClick={[Function]}
        type="button"
      >
        <span
          className="fui-Button__icon rywnvv2"
        >
          <svg
            aria-hidden={true}
            className="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
            fill="currentColor"
            height="24"
            style={
              {
                "color": "var(--colorBrandForeground1)",
              }
            }
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 5h4a2 2 0 1 0-4 0ZM8.5 5a3.5 3.5 0 1 1 7 0h5.75a.75.75 0 0 1 0 1.5h-1.32l-1.17 12.11A3.75 3.75 0 0 1 15.03 22H8.97a3.75 3.75 0 0 1-3.73-3.39L4.07 6.5H2.75a.75.75 0 0 1 0-1.5H8.5Zm2 4.75a.75.75 0 0 0-1.5 0v7.5a.75.75 0 0 0 1.5 0v-7.5ZM14.25 9a.75.75 0 0 0-.75.75v7.5a.75.75 0 0 0 1.5 0v-7.5a.75.75 0 0 0-.75-.75Z"
              fill="currentColor"
            />
          </svg>
          <svg
            aria-hidden={true}
            className="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
            fill="currentColor"
            height="24"
            style={
              {
                "color": "var(--colorBrandForeground1)",
              }
            }
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 5h4a2 2 0 1 0-4 0ZM8.5 5a3.5 3.5 0 1 1 7 0h5.75a.75.75 0 0 1 0 1.5h-1.32l-1.17 12.11A3.75 3.75 0 0 1 15.03 22H8.97a3.75 3.75 0 0 1-3.73-3.39L4.07 6.5H2.75a.75.75 0 0 1 0-1.5H8.5Zm2 4.75a.75.75 0 0 0-1.5 0v7.5a.75.75 0 0 0 1.5 0v-7.5ZM14.25 9c.41 0 .75.34.75.75v7.5a.75.75 0 0 1-1.5 0v-7.5c0-.41.34-.75.75-.75Zm-7.52 9.47a2.25 2.25 0 0 0 2.24 2.03h6.06c1.15 0 2.12-.88 2.24-2.03L18.42 6.5H5.58l1.15 11.97Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    className="msla-workflow-assertion-content"
  >
    <div
      className="msla-assertion-field"
    >
      <label
        className="ms-Label root-109"
        htmlFor="-name"
      >
        Assertion name
      </label>
      <div
        className="ms-TextField root-111"
      >
        <div
          className="ms-TextField-wrapper"
        >
          <div
            className="ms-TextField-fieldGroup fieldGroup-126"
          >
            <input
              aria-describedby="TextFieldDescription11"
              aria-invalid={true}
              aria-label="Assertion name"
              className="ms-TextField-field field-113"
              data-testid="-name"
              disabled={false}
              id="-name"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              placeholder="Enter name"
              type="text"
              value=""
            />
          </div>
        </div>
        <span
          id="TextFieldDescription11"
        >
          <div
            role="alert"
          />
        </span>
      </div>
    </div>
    <div
      className="msla-assertion-field"
    >
      <label
        className="ms-Label root-122"
        htmlFor="-description"
      >
        Description
      </label>
      <div
        className="ms-TextField ms-TextField--multiline root-111"
      >
        <div
          className="ms-TextField-wrapper"
        >
          <div
            className="ms-TextField-fieldGroup fieldGroup-123"
          >
            <textarea
              aria-invalid={false}
              aria-label="Description"
              className="ms-TextField-field field-124"
              data-testid="-description"
              disabled={false}
              id="-description"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              placeholder="Enter description"
              value="test-description"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="msla-assertion-condition"
    >
      <label
        className="ms-Label root-109"
        htmlFor="-expression"
      >
        Condition expression
      </label>
      <div
        className="msla-assertion-condition-editor"
      >
        <span
          className="msla-input-parameter-error"
          role="alert"
        >
          Enter a valid condition statement.
        </span>
      </div>
    </div>
  </div>
</div>
`;
